<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_gravity="center" android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/enteredname"
        android:hint="@string/namelbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/enteredloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/locationlbl"
        android:maxLines="1"/>

    <LinearLayout
        android:id="@+id/spinnerlin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/colourLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daylbl" />

        <Spinner
            android:id="@+id/dayspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/enteredtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/timelbl"
        android:focusable="false" />

    <Button
        android:id="@+id/okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:layout_marginTop="10dp"/>

</LinearLayout>